Island merge fix and other minor fixes